# lgnn3

./: README.md  export_verilog.py  pyproject.toml  test.py  train.py  train2.py
docs/: multiplexed_light_dlgn_forward.md
src/light_dlgn/: __init__.py  config.py  data.py  encoding.py  export_verilog.py  model.py  train_utils.py
src/light_dlgn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_light_dlgn2.py  test_multiplexed_model.py
