[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "light-dlgn"
version = "0.1.0"
description = "Clean PyTorch reference implementation of fully-connected Light DLGNs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
